# enterprise-rag-platform-v1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.py  功能链路详解.md  提示词.md  核心技术原理.md  源码精读手册.md  源码阅读路线图.md  项目架构文档.md  项目详细技术文档.md
.codex/environments/: environment.toml
apps/: __init__.py
apps/api/: __init__.py  job_store.py  main.py
apps/web/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
apps/worker/: __init__.py
core/: __init__.py
core/config/: __init__.py  settings.py
core/evaluation/: __init__.py  ragas_runner.py
core/generation/: __init__.py  answer_builder.py  citation_formatter.py  context_format.py  egress_policy.py  llm_client.py  local_executor.py
core/ingestion/: __init__.py  pipeline.py
core/models/: __init__.py  document.py
core/observability/: __init__.py  audit.py  logging.py  metrics.py  tracing.py
core/orchestration/: __init__.py  fast_path.py  fusion_gate.py  graph.py  query_expansion.py  query_understanding_vocab.py  retrieval_pipeline.py  state.py
core/retrieval/: __init__.py  cache.py  (+13 more)
docs/: api.md  architecture.md  comment_coverage_audit.md  core_reading_paths.md  deployment.md  evaluation.md  ingestion_filetype_matrix.md  local_llm_finetune_guide.md  query_understanding_vocab.md  reranker_finetune_guide.md  提示词长度治理设计方案.md  项目详解文档.md
enterprise_rag_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
train/: build_local_llm_dataset.py  build_reranker_dataset.py  check_local_llm_dataset.py  check_reranker_dataset.py  train_local_llm_qlora.py  train_reranker.py
(+112 files in other folders)
